# claude-code-toolkit

./: .gitignore  .gitmodules  IDEAS.md  README.md
.claude/: CLAUDE.md
configs/: settings.json
mcp-servers/video-analyzer/: README.md  pyproject.toml
mcp-servers/video-analyzer/src/video_analyzer_mcp/: server.py
scripts/: statusline-command.js
