[project]
name = "video-analyzer-mcp"
version = "0.1.0"
description = "MCP server for video analysis — download, extract frames, transcribe audio, and return structured data for Claude's vision capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.0",
]

[project.scripts]
video-analyzer = "video_analyzer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_analyzer_mcp"]
